@@ -29,6 +29,9 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.time.ZonedDateTime;
@@ -54,7 +57,7 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testSitemapIndex() throws UnknownFormatException, IOException {
+    public void testSitemapIndex() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         String contentType = "text/xml";
         StringBuilder scontent = new StringBuilder(1024);
@@ -77,7 +80,7 @@ public class SiteMapParserTest {
                         .append(" </sitemap>\n") //
                         .append("</sitemapindex>");
         byte[] content = scontent.toString().getBytes(UTF_8);
-        URL url = new URL("http://www.example.com/sitemapindex.xml");
+        URL url = new URI("http://www.example.com/sitemapindex.xml").toURL();
 
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
         AbstractSiteMapTest.testSerializable(asm);
@@ -87,19 +90,19 @@ public class SiteMapParserTest {
         SiteMapIndex smi = (SiteMapIndex) asm;
         assertEquals(4, smi.getSitemaps().size());
 
-        AbstractSiteMap currentSiteMap = smi.getSitemap(new URL("http://www.example.com/sitemap1.xml.gz"));
+        AbstractSiteMap currentSiteMap = smi.getSitemap(new URI("http://www.example.com/sitemap1.xml.gz").toURL());
         assertNotNull(currentSiteMap);
         assertEquals("http://www.example.com/sitemap1.xml.gz", currentSiteMap.getUrl().toString());
         assertEquals(SiteMap.convertToDate("2004-10-01T18:23:17+00:00"), currentSiteMap.getLastModified());
 
         assertTrue(currentSiteMap.toString().contains("T18:23"));
 
-        currentSiteMap = smi.getSitemap(new URL("http://www.example.com/sitemap2.xml.gz"));
+        currentSiteMap = smi.getSitemap(new URI("http://www.example.com/sitemap2.xml.gz").toURL());
         assertNotNull(currentSiteMap);
         assertEquals("http://www.example.com/sitemap2.xml.gz", currentSiteMap.getUrl().toString());
         assertEquals(SiteMap.convertToDate("2005-01-01"), currentSiteMap.getLastModified());
 
-        currentSiteMap = smi.getSitemap(new URL("http://www.example.com/dynsitemap?date=now&all=true"));
+        currentSiteMap = smi.getSitemap(new URI("http://www.example.com/dynsitemap?date=now&all=true").toURL());
         assertNotNull(currentSiteMap, "<loc> with entities not found");
         assertEquals("http://www.example.com/dynsitemap?date=now&all=true", currentSiteMap.getUrl().toString());
         // test <lastmodified> containing a character entity - the input is
@@ -107,13 +110,13 @@ public class SiteMapParserTest {
         assertNotNull(currentSiteMap.getLastModified(), "<lastmod> containing entities");
         assertEquals(SiteMap.convertToDate("2004-10-01T18:23:17+00:00"), currentSiteMap.getLastModified(), "<lastmod> containing entities");
 
-        currentSiteMap = smi.getSitemap(new URL("http://www.example.com/dynsitemap?date=lastyear&all=false"));
+        currentSiteMap = smi.getSitemap(new URI("http://www.example.com/dynsitemap?date=lastyear&all=false").toURL());
         assertNotNull(currentSiteMap, "<loc> with CDATA not found");
         assertEquals("http://www.example.com/dynsitemap?date=lastyear&all=false", currentSiteMap.getUrl().toString());
     }
 
     @Test
-    public void testSitemapXXE() throws IOException {
+    public void testSitemapXXE() throws IOException, URISyntaxException {
         // A file on disk that would be read if we were vulnerable to XXE
         File doNotVisit = new File("src/test/resources/sitemaps/do-not-visit.txt");
 
@@ -137,13 +140,13 @@ public class SiteMapParserTest {
                         .append("</urlset>");
         byte[] content = scontent.toString().getBytes(UTF_8);
 
-        URL url = new URL("http://www.example.com/sitemap.xxe.xml");
+        URL url = new URI("http://www.example.com/sitemap.xxe.xml").toURL();
         Assertions.assertThrows(UnknownFormatException.class,
             () -> parser.parseSiteMap(contentType, content, url));
     }
 
     @Test
-    public void testSitemapXXEWithDocTypeAllowed() throws UnknownFormatException, IOException {
+    public void testSitemapXXEWithDocTypeAllowed() throws UnknownFormatException, IOException, URISyntaxException {
         // A file on disk that would be read if we were vulnerable to XXE
         File doNotVisit = new File("src/test/resources/sitemaps/do-not-visit.txt");
 
@@ -168,7 +171,7 @@ public class SiteMapParserTest {
                         .append("</urlset>");
         byte[] content = scontent.toString().getBytes(UTF_8);
 
-        URL url = new URL("http://www.example.com/sitemap.xxe.xml");
+        URL url = new URI("http://www.example.com/sitemap.xxe.xml").toURL();
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
         assertEquals(SitemapType.XML, asm.getType());
         assertEquals(true, asm instanceof SiteMap);
@@ -177,11 +180,11 @@ public class SiteMapParserTest {
 
         // Should only return a single valid URL and ignore the external entity
         assertEquals(1, sm.getSiteMapUrls().size());
-        assertEquals(new URL("http://www.example.com/visit-here"), sm.getSiteMapUrls().iterator().next().getUrl());
+        assertEquals(new URI("http://www.example.com/visit-here").toURL(), sm.getSiteMapUrls().iterator().next().getUrl());
     }
 
     @Test
-    public void testSitemapXIncludeDisabled() throws UnknownFormatException, IOException {
+    public void testSitemapXIncludeDisabled() throws UnknownFormatException, IOException, URISyntaxException {
         // A file on disk that would be read if we were vulnerable to XInclude
         // attacks
         File doNotVisit = new File("src/test/resources/sitemaps/do-not-visit.txt");
@@ -204,7 +207,7 @@ public class SiteMapParserTest {
                         .append("</urlset>");
         byte[] content = scontent.toString().getBytes(UTF_8);
 
-        URL url = new URL("http://www.example.com/sitemap.xinclude.xml");
+        URL url = new URI("http://www.example.com/sitemap.xinclude.xml").toURL();
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
         assertEquals(SitemapType.XML, asm.getType());
         assertEquals(true, asm instanceof SiteMap);
@@ -214,16 +217,16 @@ public class SiteMapParserTest {
         // Should only return a single valid URL and ignore the URL contained in
         // the external entity
         assertEquals(1, sm.getSiteMapUrls().size());
-        assertEquals(new URL("http://www.example.com/visit-here"), sm.getSiteMapUrls().iterator().next().getUrl());
+        assertEquals(new URI("http://www.example.com/visit-here").toURL(), sm.getSiteMapUrls().iterator().next().getUrl());
     }
 
     @Test
-    public void testSitemapWithNamespace() throws UnknownFormatException, IOException {
+    public void testSitemapWithNamespace() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         parser.setStrictNamespace(true);
         byte[] content = getResourceAsBytes("src/test/resources/sitemaps/sitemap.ns.xml");
 
-        URL url = new URL("http://www.example.com/sitemap.ns.xml");
+        URL url = new URI("http://www.example.com/sitemap.ns.xml").toURL();
         AbstractSiteMap asm = parser.parseSiteMap(content, url);
         assertEquals(SitemapType.XML, asm.getType());
         assertEquals(true, asm instanceof SiteMap);
@@ -235,13 +238,13 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testSitemapWithWrongNamespace() throws UnknownFormatException, IOException {
+    public void testSitemapWithWrongNamespace() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         parser.setStrictNamespace(true);
 
         byte[] content = getResourceAsBytes("src/test/resources/sitemaps/sitemap.badns.xml");
 
-        URL url = new URL("http://www.example.com/sitemap.badns.xml");
+        URL url = new URI("http://www.example.com/sitemap.badns.xml").toURL();
         AbstractSiteMap asm;
         try {
             asm = parser.parseSiteMap(content, url);
@@ -262,12 +265,12 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testSitemapTXT() throws UnknownFormatException, IOException {
+    public void testSitemapTXT() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         String contentType = "text/plain";
         String scontent = "http://www.example.com/catalog?item=1\nhttp://www.example.com/catalog?item=11";
         byte[] content = scontent.getBytes(UTF_8);
-        URL url = new URL("http://www.example.com/sitemap.txt");
+        URL url = new URI("http://www.example.com/sitemap.txt").toURL();
 
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
         AbstractSiteMapTest.testSerializable(asm);
@@ -279,11 +282,11 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testSitemapTXTWithXMLExt() throws UnknownFormatException, IOException {
+    public void testSitemapTXTWithXMLExt() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         String scontent = "http://www.example.com/catalog?item=1\nhttp://www.example.com/catalog?item=11";
         byte[] content = scontent.getBytes(UTF_8);
-        URL url = new URL("http://www.example.com/sitemap.xml");
+        URL url = new URI("http://www.example.com/sitemap.xml").toURL();
         String contentType = "text/plain";
 
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
@@ -295,11 +298,11 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testSitemapTXTWithWrongMimeType() throws UnknownFormatException, IOException {
+    public void testSitemapTXTWithWrongMimeType() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         String scontent = "http://www.example.com/catalog?item=1\nhttp://www.example.com/catalog?item=11";
         byte[] content = scontent.getBytes(UTF_8);
-        URL url = new URL("http://www.example.com/sitemap.xml");
+        URL url = new URI("http://www.example.com/sitemap.xml").toURL();
         String contentType = "application/bogus";
 
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
@@ -311,13 +314,13 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testSitemapTXTfilterUrls() throws UnknownFormatException, IOException {
+    public void testSitemapTXTfilterUrls() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         parser.setURLFilter(new BasicURLNormalizer());
         String contentType = "text/plain";
         String scontent = "www.example.com/catalog?item=1\nhttp://www.example.com/catalog?item=11#anchor";
         byte[] content = scontent.getBytes(UTF_8);
-        URL url = new URL("http://www.example.com/sitemap.txt");
+        URL url = new URI("http://www.example.com/sitemap.txt").toURL();
 
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
         AbstractSiteMapTest.testSerializable(asm);
@@ -332,11 +335,11 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testSitemapXML() throws UnknownFormatException, IOException {
+    public void testSitemapXML() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         String contentType = "text/xml";
         byte[] content = getXMLSitemapAsBytes();
-        URL url = new URL("http://www.example.com/sitemap.xml");
+        URL url = new URI("http://www.example.com/sitemap.xml").toURL();
 
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
         AbstractSiteMapTest.testSerializable(asm);
@@ -353,14 +356,14 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testSitemapXMLleadingWhiteSpace() throws UnknownFormatException, IOException {
+    public void testSitemapXMLleadingWhiteSpace() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         String contentType = "text/xml";
         StringBuilder scontent = new StringBuilder();
         scontent.append("\ufeff"); // leading BOM
         scontent.append("\n \t\r\n"); // and leading white space
         byte[] content = getXMLSitemapAsBytes(scontent);
-        URL url = new URL("http://www.example.com/sitemap.xml");
+        URL url = new URI("http://www.example.com/sitemap.xml").toURL();
 
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
         assertEquals(false, asm.isIndex());
@@ -368,10 +371,10 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testSitemapXMLMediaTypes() throws UnknownFormatException, IOException {
+    public void testSitemapXMLMediaTypes() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         byte[] content = getXMLSitemapAsBytes();
-        URL url = new URL("http://www.example.com/sitemap.nonXmlExt");
+        URL url = new URI("http://www.example.com/sitemap.nonXmlExt").toURL();
 
         final String[] XML_CONTENT_TYPES = new String[] { "text/xml", "application/x-xml", "application/xml", "application/atom+xml", "application/rss+xml" };
         for (String contentType : XML_CONTENT_TYPES) {
@@ -388,7 +391,7 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testSitemapXMLfilterUrls() throws UnknownFormatException, IOException {
+    public void testSitemapXMLfilterUrls() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         parser.setURLFilter(new BasicURLNormalizer());
         String contentType = "text/xml";
@@ -404,7 +407,7 @@ public class SiteMapParserTest {
         scontent.replace(pos, pos, "#anchor");
 
         byte[] content = scontent.toString().getBytes(UTF_8);
-        URL url = new URL("http://www.example.com/sitemap.xml");
+        URL url = new URI("http://www.example.com/sitemap.xml").toURL();
 
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
         AbstractSiteMapTest.testSerializable(asm);
@@ -431,7 +434,7 @@ public class SiteMapParserTest {
                             .append("<url><!-- This file is not a valid XML file --></url>").append("<url><loc> http://cs.harding.edu/fmccown/sitemaps/something.html</loc>")
                             .append("</url><!-- missing opening url tag --></url></urlset>");
             byte[] content = scontent.toString().getBytes(UTF_8);
-            URL url = new URL("http://www.example.com/sitemapindex.xml");
+            URL url = new URI("http://www.example.com/sitemapindex.xml").toURL();
 
             // This Sitemap contains badly formatted XML and can't be read
             parser.parseSiteMap(contentType, content, url);
@@ -439,22 +442,27 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testMissingLocSitemapIndexFile() throws UnknownFormatException, IOException {
+    public void testMissingLocSitemapIndexFile() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         byte[] content = getResourceAsBytes("src/test/resources/sitemaps/sitemap.index.xml");
 
-        URL url = new URL("http://www.example.com/sitemap.index.xml");
+        URL url = new URI("http://www.example.com/sitemap.index.xml").toURL();
         AbstractSiteMap asm = parser.parseSiteMap(content, url);
         assertEquals(true, asm.isIndex());
         assertEquals(true, asm instanceof SiteMapIndex);
         SiteMapIndex sm = (SiteMapIndex) asm;
         assertEquals(15, sm.getSitemaps().size());
         String sitemap = "https://example.com/sitemap.jss?portalCode=10260&lang=en";
-        assertNotNull(sm.getSitemap(new URL(sitemap)), "Sitemap " + sitemap + " not found in sitemap index");
+        try {
+            assertNotNull(sm.getSitemap(new URI(sitemap).toURL()), "Sitemap " + sitemap + " not found in sitemap index");
+        } catch (MalformedURLException | URISyntaxException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        }
     }
 
     @Test
-    public void testUnclosedSitemapIndexFile() throws UnknownFormatException, IOException {
+    public void testUnclosedSitemapIndexFile() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         StringBuilder scontent = new StringBuilder();
         scontent.append("<?xml version=\"1.0\" encoding=\"UTF-8\"?>") //
@@ -465,7 +473,7 @@ public class SiteMapParserTest {
                         .append(" </sitemap>") //
                         .append("</sitemapindex>");
         byte[] content = scontent.toString().getBytes(UTF_8);
-        URL url = new URL("http://www.example.com/sitemapindex.xml");
+        URL url = new URI("http://www.example.com/sitemapindex.xml").toURL();
 
         AbstractSiteMap asm = parser.parseSiteMap(content, url);
         assertEquals(true, asm.isIndex());
@@ -473,7 +481,7 @@ public class SiteMapParserTest {
         SiteMapIndex sm = (SiteMapIndex) asm;
         assertEquals(2, sm.getSitemaps().size());
         String urlSecondSitemap = "https://www.example.org/sitemap2.xml";
-        AbstractSiteMap secondSitemap = sm.getSitemap(new URL(urlSecondSitemap));
+        AbstractSiteMap secondSitemap = sm.getSitemap(new URI(urlSecondSitemap).toURL());
         assertNotNull(secondSitemap, "Sitemap " + urlSecondSitemap + " not found in sitemap index");
 
         // check reset of attributes (lastmod) when "autoclosing" <sitemap>
@@ -495,13 +503,13 @@ public class SiteMapParserTest {
         assertEquals(true, asm instanceof SiteMapIndex);
         sm = (SiteMapIndex) asm;
         assertEquals(3, sm.getSitemaps().size());
-        secondSitemap = sm.getSitemap(new URL(urlSecondSitemap));
+        secondSitemap = sm.getSitemap(new URI(urlSecondSitemap).toURL());
         assertNotNull(secondSitemap, "Sitemap " + urlSecondSitemap + " not found in sitemap index");
         assertNull(secondSitemap.getLastModified(), "Sitemap " + urlSecondSitemap + " without modification date");
     }
 
     @Test
-    public void testStripUnicodeWhiteSpace() throws UnknownFormatException, IOException {
+    public void testStripUnicodeWhiteSpace() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         StringBuilder scontent = new StringBuilder();
         scontent.append("<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n") //
@@ -518,23 +526,23 @@ public class SiteMapParserTest {
                         .append(" </sitemap>\n") //
                         .append("</sitemapindex>");
         byte[] content = scontent.toString().getBytes(UTF_8);
-        URL url = new URL("https://www.example.com/sitemapindex.xml");
+        URL url = new URI("https://www.example.com/sitemapindex.xml").toURL();
         AbstractSiteMap asm = parser.parseSiteMap(content, url);
         assertEquals(true, asm.isIndex());
         assertEquals(true, asm instanceof SiteMapIndex);
         SiteMapIndex sm = (SiteMapIndex) asm;
         assertEquals(2, sm.getSitemaps().size());
         String sitemap = "https://www.example.com/sitemap2.xml";
-        assertNotNull(sm.getSitemap(new URL(sitemap)), "Sitemap " + sitemap + " not found in sitemap index");
+        assertNotNull(sm.getSitemap(new URI(sitemap).toURL()), "Sitemap " + sitemap + " not found in sitemap index");
     }
 
     @Test
-    public void testSitemapGZ() throws UnknownFormatException, IOException {
+    public void testSitemapGZ() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         String contentType = "application/gzip";
         byte[] content = getResourceAsBytes("src/test/resources/sitemaps/xmlSitemap.gz");
 
-        URL url = new URL("http://www.example.com/sitemap.xml.gz");
+        URL url = new URI("http://www.example.com/sitemap.xml.gz").toURL();
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
         assertEquals(false, asm.isIndex());
         assertEquals(true, asm instanceof SiteMap);
@@ -543,12 +551,12 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testSitemapTextGZ() throws UnknownFormatException, IOException {
+    public void testSitemapTextGZ() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         String contentType = "application/gzip";
         byte[] content = getResourceAsBytes("src/test/resources/sitemaps/sitemap.txt.gz");
 
-        URL url = new URL("http://www.example.com/sitemap.txt.gz");
+        URL url = new URI("http://www.example.com/sitemap.txt.gz").toURL();
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
         assertEquals(false, asm.isIndex());
         assertEquals(true, asm instanceof SiteMap);
@@ -557,13 +565,13 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testSitemapGZMediaTypes() throws UnknownFormatException, IOException {
+    public void testSitemapGZMediaTypes() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         byte[] content = getResourceAsBytes("src/test/resources/sitemaps/xmlSitemap.gz");
 
         final String[] GZ_CONTENT_TYPES = new String[] { "application/gzip", "application/x-gzip", "application/x-gunzip", "application/gzipped", "application/gzip-compressed", "gzip/document" };
         for (String contentType : GZ_CONTENT_TYPES) {
-            URL url = new URL("http://www.example.com/sitemap");
+            URL url = new URI("http://www.example.com/sitemap").toURL();
             AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
             assertEquals(false, asm.isIndex());
             assertEquals(true, asm instanceof SiteMap);
@@ -578,14 +586,14 @@ public class SiteMapParserTest {
             SiteMapParser parser = new SiteMapParser();
             String contentType = "application/octet-stream";
             byte[] content = "this is a bogus sitemap".getBytes(StandardCharsets.UTF_8);
-            URL url = new URL("http://www.example.com/sitemap");
+            URL url = new URI("http://www.example.com/sitemap").toURL();
 
             parser.parseSiteMap(contentType, content, url);
         });
     }
 
     @Test
-    public void testLenientParser() throws UnknownFormatException, IOException {
+    public void testLenientParser() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         String contentType = "text/xml";
         StringBuilder scontent = new StringBuilder(1024);
@@ -593,7 +601,7 @@ public class SiteMapParserTest {
                         .append("<loc>http://www.example.com/</loc>").append("</url>").append("</urlset>");
         byte[] content = scontent.toString().getBytes(UTF_8);
 
-        URL url = new URL("http://www.example.com/subsection/sitemap.xml");
+        URL url = new URI("http://www.example.com/subsection/sitemap.xml").toURL();
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
         assertEquals(false, asm.isIndex());
         assertEquals(true, asm instanceof SiteMap);
@@ -613,27 +621,27 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testAtomFormat() throws UnknownFormatException, IOException {
+    public void testAtomFormat() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         byte[] content = getResourceAsBytes("src/test/resources/sitemaps/atom.xml");
-        URL url = new URL("http://example.org/atom.xml");
+        URL url = new URI("http://example.org/atom.xml").toURL();
 
         SiteMap sm = (SiteMap) parser.parseSiteMap(content, url);
         AbstractSiteMapTest.testSerializable(sm);
 
         assertEquals(1, sm.getSiteMapUrls().size());
         SiteMapURL smu = sm.getSiteMapUrls().iterator().next();
-        assertEquals(new URL("http://example.org/2003/12/13/atom03"), smu.getUrl());
+        assertEquals(new URI("http://example.org/2003/12/13/atom03").toURL(), smu.getUrl());
         // test for <updated>2003-12-13T18:30:02Z</updated>
         assertNotNull(smu.getLastModified());
         assertEquals(12, ZonedDateTime.ofInstant(smu.getLastModified().toInstant(), AbstractSiteMap.TIME_ZONE_UTC).get(ChronoField.MONTH_OF_YEAR));
     }
 
     @Test
-    public void testRSSFormat() throws UnknownFormatException, IOException {
+    public void testRSSFormat() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser(true, false);
         byte[] content = getResourceAsBytes("src/test/resources/rss/feed.rss");
-        URL url = new URL("https://www.example.com/index.php?feed/rss");
+        URL url = new URI("https://www.example.com/index.php?feed/rss").toURL();
 
         SiteMap sm = (SiteMap) parser.parseSiteMap(content, url);
         AbstractSiteMapTest.testSerializable(sm);
@@ -641,14 +649,14 @@ public class SiteMapParserTest {
         assertEquals(4, sm.getSiteMapUrls().size());
         Iterator<SiteMapURL> it = sm.getSiteMapUrls().iterator();
         SiteMapURL smu = it.next();
-        assertEquals(new URL("https://www.example.com/blog/post/1"), smu.getUrl());
+        assertEquals(new URI("https://www.example.com/blog/post/1").toURL(), smu.getUrl());
         // test for <pubDate>Sun, 06 Sep 2009 16:20:00 +0000</pubDate>
         assertNotNull(smu.getLastModified());
         assertEquals(9, ZonedDateTime.ofInstant(smu.getLastModified().toInstant(), AbstractSiteMap.TIME_ZONE_UTC).get(ChronoField.MONTH_OF_YEAR));
 
-        assertEquals(new URL("https://www.example.com/guid.html"), it.next().getUrl());
-        assertEquals(new URL("https://www.example.com/foo?q=a&l=en"), it.next().getUrl());
-        assertEquals(new URL("https://www.example.com/foo?q=a&l=fr"), it.next().getUrl());
+        assertEquals(new URI("https://www.example.com/guid.html").toURL(), it.next().getUrl());
+        assertEquals(new URI("https://www.example.com/foo?q=a&l=en").toURL(), it.next().getUrl());
+        assertEquals(new URI("https://www.example.com/foo?q=a&l=fr").toURL(), it.next().getUrl());
     }
 
     /**
@@ -659,13 +667,14 @@ public class SiteMapParserTest {
      * 
      * @throws IOException
      * @throws UnknownFormatException
+     * @throws URISyntaxException
      */
     @Test
-    public void testRSS10SyndicationFormat() throws UnknownFormatException, IOException {
+    public void testRSS10SyndicationFormat() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
 
         String contentType = "text/xml";
-        URL url = new URL("http://www.example.com/sitemapindex.xml");
+        URL url = new URI("http://www.example.com/sitemapindex.xml").toURL();
         StringBuilder scontent = new StringBuilder(1024);
         scontent.append("<?xml version=\"1.0\"?>")
                         .append("<rdf:RDF xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"  xmlns=\"http://purl.org/rss/1.0/\">")
@@ -702,11 +711,11 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testRSSPubDate() throws UnknownFormatException, IOException {
+    public void testRSSPubDate() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         String contentType = "text/xml";
         byte[] content = getResourceAsBytes("src/test/resources/rss/xmlRss_pubDate.xml");
-        URL url = new URL("http://www.example.com/rss.xml");
+        URL url = new URI("http://www.example.com/rss.xml").toURL();
 
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
         assertSame(SitemapType.RSS, asm.getType(), "Not an RSS");
@@ -738,7 +747,7 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testPartialSitemapsAllowed() throws UnknownFormatException, IOException {
+    public void testPartialSitemapsAllowed() throws UnknownFormatException, IOException, URISyntaxException {
 
         SiteMapParser parser = new SiteMapParser(false, true);
         String contentType = "text/xml";
@@ -748,7 +757,7 @@ public class SiteMapParserTest {
 
         byte[] content = scontent.toString().getBytes(UTF_8);
 
-        URL url = new URL("http://www.example.com/subsection/sitemap.xml");
+        URL url = new URI("http://www.example.com/subsection/sitemap.xml").toURL();
 
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
         assertEquals(false, asm.isIndex());
@@ -780,7 +789,7 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testUrlLocUrl() throws UnknownFormatException, IOException {
+    public void testUrlLocUrl() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser(false);
         String contentType = "text/xml";
         StringBuilder scontent = new StringBuilder(1024);
@@ -795,7 +804,7 @@ public class SiteMapParserTest {
 
         byte[] content = scontent.toString().getBytes(UTF_8);
 
-        URL url = new URL("http://www.example.com/subsection/sitemap.xml");
+        URL url = new URI("http://www.example.com/subsection/sitemap.xml").toURL();
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
         assertEquals(false, asm.isIndex());
         assertEquals(true, asm instanceof SiteMap);
@@ -806,7 +815,7 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testPartialSitemapIndicesAllowed() throws UnknownFormatException, IOException {
+    public void testPartialSitemapIndicesAllowed() throws UnknownFormatException, IOException, URISyntaxException {
 
         SiteMapParser parser = new SiteMapParser(false, true);
         String contentType = "text/xml";
@@ -815,7 +824,7 @@ public class SiteMapParserTest {
                         .append("<sitemap><loc>http://www.example.com/sitemap1.xml.gz</loc><las");
         byte[] content = scontent.toString().getBytes(UTF_8);
 
-        URL url = new URL("http://www.example.com/subsection/sitemap.xml");
+        URL url = new URI("http://www.example.com/subsection/sitemap.xml").toURL();
 
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
         assertEquals(true, asm.isIndex());
@@ -826,11 +835,11 @@ public class SiteMapParserTest {
     }
 
     @Test
-    public void testWalkSiteMap() throws UnknownFormatException, IOException {
+    public void testWalkSiteMap() throws UnknownFormatException, IOException, URISyntaxException {
         SiteMapParser parser = new SiteMapParser();
         String contentType = "text/xml";
         byte[] content = getXMLSitemapAsBytes();
-        URL url = new URL("http://www.example.com/sitemap.xml");
+        URL url = new URI("http://www.example.com/sitemap.xml").toURL();
 
         AbstractSiteMap asm = parser.parseSiteMap(contentType, content, url);
         final List<SiteMapURL> urls = new ArrayList<>();
