@@ -3,7 +3,8 @@ package crawlercommons.sitemaps.extension;
 import org.junit.jupiter.api.Test;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -12,12 +13,12 @@ import static org.junit.jupiter.api.Assertions.assertNull;
 public class ImageAttributesTest {
 
     @Test
-    public void testImageAttributesAsMap() throws MalformedURLException {
-        ImageAttributes attributes = new ImageAttributes(new URL("http://example.com/image.jpg"));
+    public void testImageAttributesAsMap() throws MalformedURLException, URISyntaxException {
+        ImageAttributes attributes = new ImageAttributes(new URI("http://example.com/image.jpg").toURL());
         attributes.setCaption("caption");
         attributes.setGeoLocation("kalamazoo");
         attributes.setTitle("Title");
-        attributes.setLicense(new URL("http://example.com/license"));
+        attributes.setLicense(new URI("http://example.com/license").toURL());
         Map<String, String[]> map = attributes.asMap();
 
         assertEquals(attributes.getLoc().toString(), map.get(ImageAttributes.LOC)[0]);
